testsuite/poke.pkl/struct-types-diag-3.pk
/* { dg-do compile } */

/* Struct element constraints should evaluate to a boolean.  */

deftype Packet = struct
  {
    int i : "foo"; /* { dg-error "" } */
  };
